feat: add section hero and skills

--- a/index.html
+++ b/index.html
@@ -9,28 +9,74 @@
     <title>Project-RSS-Portfolio-Photographer</title>
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
-            <div class="header logo__img"></div>
-        </div>
-        <div class="nav">
-            <div class="nav__bar">
-                <a href="#skills">Skills</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#video">Video</a>
-                <a href="#price">Price</a>
-                <a href="#contact">Contact</a>
+    <div class="container__body">
+        <header class="header">
+            <div class="container container__header">
+                <div class="logo">
+                    <div class="container__header logo__img"></div>
+                </div>
+                <div class="nav">
+                    <div class="nav__bar">
+                        <a href="#skills">Skills</a>
+                        <a href="#portfolio">Portfolio</a>
+                        <a href="#video">Video</a>
+                        <a href="#price">Price</a>
+                        <a href="#contact">Contact</a>
+                    </div>
+                </div>
             </div>
-        </div>
-    </header>
-    <main class="main">
-        <section class="hero" id="hero"></section>
-        <section class="skills" id="skills"></section>
-        <section class="portfolio" id="portfolio"></section>
-        <section class="video" id="video"></section>
-        <section class="price" id="price"></section>
-        <section class="contact" id="contact"></section>
-    </main>
-    <footer class="footer"></footer>
+        </header>
+        <main class="main">
+            <section class="hero" id="hero">
+                <div class="container hero__container">
+                    <div class="about__hero">
+                        <h1 class="name">Alexa Rise</h1>
+                        <p class="about__text">Save sincere emotions, romantic feelings and happy moments of life together with professional photographer Alexa Rise</p>
+                        <button class="btn__hero">Hire me</button>
+                    </div>
+                </div>
+            </section>
+            <section class="skills" id="skills">
+                <div class="container skills__container">
+                    <div class="title__section">
+                        <h2><span>Skills</span></h2>
+                    </div>
+                    <div class="about__skills">
+                        <div class="skill">
+                            <div class="img__skill photo__skill"></div>
+                            <h3>Digital photography</h3>
+                            <p>High-quality photos in the studio and on the nature</p>
+                        </div>
+                        <div class="skill">
+                            <div class="img__skill video__skill"></div>
+                            <h3>Video shooting</h3>
+                            <p>Capture your moments so that they always stay with you</p>
+                        </div>
+                        <div class="skill">
+                            <div class="img__skill retouch__skill"></div>
+                            <h3>Retouch</h3>
+                            <p>I strive to make photography surpass reality</p>
+                        </div>
+                        <div class="skill">
+                            <div class="img__skill audio__skill"></div>
+                            <h3>Audio</h3>
+                            <p>Professional sounds recording for video, advertising, portfolio</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio" id="portfolio">
+                <div class="container portfolio__container">
+                    <div class="title__section">
+                        <h2><span>Portfolio</span></h2>
+                    </div>
+                </div>
+            </section>
+            <section class="video" id="video"></section>
+            <section class="price" id="price"></section>
+            <section class="contact" id="contact"></section>
+        </main>
+        <footer class="footer"></footer>
+    </div>
 </body>
 </html>
