--- a/index.html
+++ b/index.html
@@ -70,13 +70,89 @@
                     <div class="title__section">
                         <h2><span>Portfolio</span></h2>
                     </div>
+                    <div class="btn__block">
+                        <button class="btn__season" data-season="winter">Winter</button>
+                        <button class="btn__season" data-season="spring">Spring</button>
+                        <button class="btn__season" data-season="summer">Summer</button>
+                        <button class="btn__season btn__season__active" data-season="autumn">Autumn</button>
+                    </div>
+                    <div class="portfolio__wrapper">
+                        <img class="portfolio__img" src="./assets/autumn/1.png" alt="image">
+                        <img class="portfolio__img" src="./assets/autumn/2.png" alt="image">
+                        <img class="portfolio__img" src="./assets/autumn/3.png" alt="image">
+                        <img class="portfolio__img" src="./assets/autumn/4.png" alt="image">
+                        <img class="portfolio__img" src="./assets/autumn/5.png" alt="image">
+                        <img class="portfolio__img" src="./assets/autumn/6.png" alt="image">
+                    </div>
                 </div>
             </section>
-            <section class="video" id="video"></section>
-            <section class="price" id="price"></section>
-            <section class="contact" id="contact"></section>
+            <section class="video" id="video">
+                <div class="container video__container">
+                    <div class="title__section">
+                        <h2><span>Video</span></h2>
+                    </div>
+                    <div class="video__wrapper">
+                        <div class="video__player">
+                            <div class="btn__video"></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="price" id="price">
+                <div class="container price__container">
+                    <div class="title__section">
+                        <h2><span>Price</span></h2>
+                    </div>
+                    <div class="price__wrapper">
+                        <div class="block_price">
+                            <h3>Standard</h3>
+                            <p class="coast">500 $</p>
+                            <p>One location<br>120 photos in color<br>12 photos in retouch<br>Readiness 2-3 weeks<br>Make up, visage</p>
+                            <button>Order shooting</button>
+                        </div>
+                        <div class="block_price">
+                            <h3>Premium</h3>
+                            <p class="coast">700 $</p>
+                            <p>One or two locations<br>200 photos in color<br>20 photos in retouch<br>Readiness 1-2 weeks<br>Make up, visage</p>
+                            <button>Order shooting</button>
+                        </div>
+                        <div class="block_price">
+                            <h3>Gold</h3>
+                            <p class="coast">1000 $</p>
+                            <p>Three locations or more<br>300 photos in color<br>50 photos in retouch<br>Readiness 1 week<br>Make up, visage, hairstyle</p>
+                            <button>Order shooting</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="contact" id="contact">
+                <div class="container contact_container">
+                    <div class="contact__wrapper">
+                        <h2>Contact me</h2>
+                        <div class="contact__form">
+                            <input type="email" class="contact__email" id="" placeholder="E-mail">
+                            <input type="tel" class="contact__tell" id="" placeholder="Phone">
+                            <input type="text" class="contact__text" id="" placeholder="Message">
+                            <button>Send message</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <div class="container footer__container">
+                <div class="contact__author">
+                    <p>©</p>
+                    <p>2022</p>
+                    <a href="https://github.com/ViktorElenich" target="_blank">Viktor Elenich</a>
+                </div>
+                <div class="contact__school">
+                    <a href="http://" target="_blank"></a>
+                </div>
+                <div class="social__contact"></div>
+            </div>
+        </footer>
+        <script type="module" src="./index.js"></script>
     </div>
 </body>
 </html>
