feat: add section contact, footer and media screen

--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
         <header class="header">
             <div class="container container__header">
                 <div class="logo">
-                    <div class="container__header logo__img"></div>
+                    <a href="" class="container__header logo__img"></a>
                 </div>
-                <div class="nav">
+                <div class="header__burger">
+                    <span></span>
+                </div>
+                <nav class="nav">
                     <div class="nav__bar">
                         <a href="#skills">Skills</a>
                         <a href="#portfolio">Portfolio</a>
@@ -23,7 +26,7 @@
                         <a href="#price">Price</a>
                         <a href="#contact">Contact</a>
                     </div>
-                </div>
+                </nav>
             </div>
         </header>
         <main class="main">
@@ -146,10 +149,13 @@
                     <p>2022</p>
                     <a href="https://github.com/ViktorElenich" target="_blank">Viktor Elenich</a>
                 </div>
-                <div class="contact__school">
-                    <a href="http://" target="_blank"></a>
+                <a a href="https://rollingscopes.com/" target="_blank" class="contact__school"></a>
+                <div class="social__contact">
+                    <a href="http://instagram.com" target="_blank" class="instagram"></a>
+                    <a href="http://facebook.com" target="_blank" class="facebook"></a>
+                    <a href="http://twitter.com" target="_blank" class="twitter"></a>
+                    <a href="http://pinterest.com" target="_blank" class="pinterest"></a>
                 </div>
-                <div class="social__contact"></div>
             </div>
         </footer>
         <script type="module" src="./index.js"></script>
