--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
                 <div class="logo">
                     <a href="" class="container__header logo__img"></a>
                 </div>
-                <div class="header__burger">
-                    <span></span>
-                </div>
                 <nav class="nav">
                     <div class="nav__bar">
                         <a href="#skills">Skills</a>
@@ -27,6 +24,10 @@
                         <a href="#contact">Contact</a>
                     </div>
                 </nav>
+                <div class="switch__theme"></div>
+                <div class="header__burger">
+                    <span></span>
+                </div>
             </div>
         </header>
         <main class="main">
