refactor: refactor html code

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         <h2><span class="lang" key="portfolio">Portfolio</span></h2>
                     </div>
                     <div class="btn__block">
-                        <button class="btn__season lang" key="season-winter">Winter</button>
-                        <button class="btn__season lang" key="season-spring">Spring</button>
-                        <button class="btn__season lang" key="season-summer">Summer</button>
-                        <button class="btn__season lang btn__season__active" key="season-autumn">Autumn</button>
+                        <button class="btn__season lang" data-season="winter" key="season-winter">Winter</button>
+                        <button class="btn__season lang" data-season="spring" key="season-spring">Spring</button>
+                        <button class="btn__season lang" data-season="summer" key="season-summer">Summer</button>
+                        <button class="btn__season lang btn__season__active" data-season="autumn" key="season-autumn">Autumn</button>
                     </div>
                     <div class="portfolio__wrapper">
                         <img class="portfolio__img" src="./assets/autumn/1.png" alt="image">
